# attributes-to-language

./: LICENSE  README.md  pyproject.toml  readme.md  setup.py
attributes_to_language/: __init__.py  actors.py  composer.py  trigger.py  types.py  utils.py  version.py  writers.py
examples/simple_shapes/: main.py  writers.py
