[tool.poetry]
name = "attributes-to-language"
version = "0.4.0.dev"
description = "Parameterized language from attributes and grammar"
authors = ["bdvllrs <bdvllrs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.25"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
install_types = true
check_untyped_defs = true
exclude = ["examples/*"]


[tool.ruff]
target-version = "py311"
extend-exclude = [
    "__pycache__",
    ".mypy_cache",
    "docs/api",
    ".github",
]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "SIM", "I"]

[tool.ruff.format]
docstring-code-format = true

